--- a/src/scss/blocks/texts.scss
+++ b/src/scss/blocks/texts.scss
@@ -1,1 +1,34 @@
+@use '../mixins/responsive.scss' as *;
+.text{
+    font-weight: 500;
+    font-size: 1rem;
+    line-height: 26px;
+    color: #83869A;
+    margin: 0 ;
+    @include responsive(desktop){
+        margin: 0 0 11px;
+        font-size: 1.125rem;
+        line-height: 28px;
+    }
+}
 
+.text--bold{
+  font-weight: 800;
+  font-size: 1.5rem;
+  line-height: 32px;
+  color: white;
+  background-image: linear-gradient(#FF6F48, #F02AA6); 
+  padding: 24px 29px 32px 28px;
+  border-radius: 10px;
+}
+
+.text-card{
+    margin-bottom: 24px;
+    @include responsive(tablet){
+        width: 286px;
+    }
+
+    @include responsive(desktop){
+        margin-bottom: 0;
+    }
+}
