--- a/src/scss/blocks/titles.scss
+++ b/src/scss/blocks/titles.scss
@@ -1,1 +1,24 @@
+@use '../mixins/responsive.scss' as *;
+.title, .subtitle{
+    
+    color: var(--primary-color);
+    font-weight: 800;
+}
 
+.title{
+    margin: 0 0 2px;
+    font-size: 2.5rem;
+    @include responsive(desktop){
+        font-size: 3.5rem;
+    }
+}
+
+.subtitle{
+    font-size: 1.25rem;
+    margin: 0 0 16px;
+
+    @include responsive(desktop){
+        font-size: 24px;
+        margin: 0 
+    }
+}
