--- a/src/scss/blocks/buttons.scss
+++ b/src/scss/blocks/buttons.scss
@@ -1,40 +1,68 @@
 @use '../mixins/hover.scss' as *;
-.button{
-    padding: 9px 24px 11px ;
-    border-radius: 1.75rem;
-    color: white;
-    font-weight: 700;
-    font-size: 1rem;
-    line-height: 28px;
+@use '../mixins/pseudo.scss' as *;
+.button {
+  padding: 9px 24px 11px;
+  border-radius: 1.75rem;
+  color: white;
+  font-weight: 700;
+  font-size: 1rem;
+  line-height: 28px;
 }
 
-.button--blue{
-    background-color: var(--primary-color);
-    @include hover{
-        background-color: #666CA3;
+.button--blue {
+  background-color: var(--primary-color);
+  @include hover {
+    background-color: #666ca3;
+  }
+}
+
+.button--gradiant {
+  position: relative;
+  background-image: linear-gradient(#ff6f48, #f02aa6);
+  padding: 15px 37px;
+  width: fit-content;
+  @include hover {
+    &::after {
+      opacity: 0.5;
     }
-}
+  }
 
-.button--gradiant{
-    background-image: linear-gradient(#FF6F48, #F02AA6);
-    padding: 15px 37px;
-    width: fit-content;
-    
-
-}
-
-.button--footer{
-    background-image: linear-gradient(#4851FF, #F02AA6);
-    @include hover{
-        background-color: rgba(255, 255, 255, 0.5);
+  &::after {
+    @include pseudo(100%, 100%) {
+      top: 0;
+      left: 0;
+      opacity: 0;
+      background-color: #fff;
+      border-radius: 1.75rem;
     }
+  }
 }
 
-.button--pink{
-    color: #F74780 ;
-    padding: 0;
-    width: fit-content;
-    @include hover{
-        color: #FFA7C3;
+.button--footer {
+  position: relative;
+  background-image: linear-gradient(#4851ff, #f02aa6);
+  @include hover {
+    &::after {
+      opacity: 0.5;
     }
+  }
+
+  &::after {
+    @include pseudo(100%, 100%) {
+      top: 0;
+      left: 0;
+      opacity: 0;
+      background-color: #fff;
+      border-radius: 1.75rem;
+    }
+  }
+}
+
+.button--pink {
+  color: #f74780;
+  padding: 0;
+  width: fit-content;
+  @include hover {
+    color: #ffa7c3;
+  }
 }
