--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -1,44 +1,52 @@
 @use '../mixins/responsive.scss' as *;
-.header{
-  padding: 16px 16px 0 ;  
-  @include responsive(tablet){
+.header {
+  padding: 16px 16px 0;
+  @include responsive(tablet) {
     padding: 24px 39px 0;
-    background-image: url(../src/assets/images/image-hero-tablet.png);
-    margin-bottom: 186px;
+    height: fit-content;
+    background-image: url(../../assets/images/image-hero-tablet.png);
+    background-repeat: no-repeat;
+    background-position: 375px -90px;
+    margin-bottom: 170px;
   }
-  @include responsive(desktop){
+  @include responsive(desktop) {
     padding: 38px 165px 0;
+    background-image: url(../../assets/images/image-hero-desktop.png);
+    height: 750px;
+    background-repeat: no-repeat;
+    background-position: 700px -150px;
+    margin-bottom: 226px;
   }
 }
 
-.top-bar{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 2.375rem;
+.top-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 2.375rem;
+  @include responsive(desktop) {
+    margin-bottom: 172px;
+  }
 }
 
-.skilled__info{
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
-    margin-bottom: 30px;
-    @include responsive (tablet){
-        position: relative;
-        width: 398px;
-        margin-bottom: 0;
-    }
-    @include responsive(desktop){
-        width: 457px;
-        gap: 1.8125rem;
-    }
-
+.skilled__info {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  margin-bottom: 30px;
+  @include responsive(tablet) {
+    position: relative;
+    width: 398px;
+    margin-bottom: 0;
+  }
+  @include responsive(desktop) {
+    width: 457px;
+    gap: 1.8125rem;
+  }
 }
 
-.image{
-    @include responsive (tablet){
-        display: none;
-    }
+.image {
+  @include responsive(tablet) {
+    display: none;
+  }
 }
-
-
