--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -4,14 +4,14 @@
   @include responsive(tablet) {
     padding: 24px 39px 0;
     height: 630px;
-    background-image: url(../../assets/images/image-hero-tablet.png);
+    background-image: url(/assets/images/image-hero-tablet.png);
     background-repeat: no-repeat;
     background-position: 375px -90px;
     margin-bottom: 150px;
   }
   @include responsive(desktop) {
     padding: 38px 165px 0;
-    background-image: url(../../assets/images/image-hero-desktop.png);
+    background-image: url(/assets/images/image-hero-desktop.png);
     height: 750px;
     background-repeat: no-repeat;
     background-position: 700px -150px;
